--- a/works/milkyWay/index.html
+++ b/works/milkyWay/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149600281-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-149600281-2');
+    </script>
+    <!-- Meta -->
     <meta charset="utf-8">
-    <meta name="description" content="I'm a non-professional, and... neither engineer nor designer.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta name="description" content="I'm a non-professional. Neither web dev nor designer.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Open Graph Protocol -->
-    <meta property="og:title" content="Toshiya Marukubo | GitHub.io | milkyWay.js">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://toshiya-marukubo.github.io/works/milkyWay/index.html">
-    <meta property="og:description" content="I'm a non-professional, and... neither engineer nor designer.">
-    <meta property="og:site_name" content="Toshiya Marukubo | GitHub.io">
-    <meta property="og:image">
+    <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
+    <meta property="og:url" content="https://toshiya-marukubo.github.io/">
+    <meta property="og:title" content="Toshiya Marukubo | Homepage | milkyWay">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-milkyWay.png">
+    <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@toshiyamarukubo">
     <meta name="twitter:creator" content="@toshiyamarukubo">
-    <title>Toshiya Marukubo | GitHub.io | milkyWay.js</title>
+    <!-- Icons -->
+    <link rel="icon" href="https://toshiya-marukubo.github.io/home/img/favicon.svg" sizes="any" type="image/svg+xml">
+    <!-- Title -->
+    <title>Toshiya Marukubo | Homepage | milkyWay</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
