--- a/works/grassGrow/index.html
+++ b/works/grassGrow/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149600281-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-149600281-2');
+    </script>
+    <!-- Meta -->
     <meta charset="utf-8">
-    <meta name="description" content="I'm a non-professional, and... neither engineer nor designer.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta name="description" content="I'm a non-professional. Neither web dev nor designer.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Open Graph Protocol -->
-    <meta property="og:title" content="Toshiya Marukubo | GitHub.io | grassGrow.js">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://toshiya-marukubo.github.io/works/grassGrow/index.html">
-    <meta property="og:description" content="I'm a non-professional, and... neither engineer nor designer.">
-    <meta property="og:site_name" content="Toshiya Marukubo | GitHub.io">
-    <meta property="og:image">
+    <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
+    <meta property="og:url" content="https://toshiya-marukubo.github.io/">
+    <meta property="og:title" content="Toshiya Marukubo | Homepage | grassGrow">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-grassGrow.png">
+    <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@toshiyamarukubo">
     <meta name="twitter:creator" content="@toshiyamarukubo">
-    <title>Toshiya Marukubo | GitHub.io | grassGrow.js</title>
+    <!-- Icons -->
+    <link rel="icon" href="https://toshiya-marukubo.github.io/home/img/favicon.svg" sizes="any" type="image/svg+xml">
+    <!-- Title -->
+    <title>Toshiya Marukubo | Homepage | grassGrow</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -31,14 +43,12 @@
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
     <!-- Contents -->
-    <span id="cloud" style="visibility: hidden;"><i class="fas fa-cloud fa-4x"></i></span>
     <div id="contents" style="visibility: hidden;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
     </div>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
     <script src="./grassGrow.js"></script>
-    <script src="../../home/js/all.min.js"></script>
   </body>
 </html>
 
