--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <h1><a href="/">Toshiya Marukubo</a></h1>
       <p>I'm a non-professional. Neither web dev nor designer.</p>
       <nav>
-        <ul>
-          <li id="worksBtn"><a href="#">Works</a></li>
-          <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
-          <li><a href="https://github.com/toshiya-marukubo">GitHub</a></li>
-          <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
+        <ul class="fa-ul">
+          <li id="worksBtn"><a href="#"><span class="fa-li"><i class="fas fa-paint-brush"></i></span>Works</a></li>
+          <li><a href="https://codepen.io/toshiya-marukubo"><span class="fa-li"><i class="fab fa-codepen"></i></span>CodePen</a></li>
+          <li><a href="https://github.com/toshiya-marukubo"><span class="fa-li"><i class="fab fa-github"></i></span>GitHub</a></li>
+          <li><a href="https://twitter.com/toshiyamarukubo"><span class="fa-li"><i class="fab fa-twitter"></i></span>Twitter</a></li>
         </ul>
       </nav>
     </div>
