--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
           <li><a href="./works/aquarium/index.html"><span class="fa-li"><i class="fas fa-water"></i></span>aquarium</a></li>
           <li><a href="./works/happyValentine/index.html"><span class="fa-li"><i class="far fa-heart"></i></span>happyValentine</a></li>
           <li><a href="./works/chocolate/index.html"><span class="fa-li"><i class="far fa-heart"></i></span>chocolate</a></li>
-          <li><a href="./works/fullMoon/index.html"><span class="fa-li"><i class="fas fa-moon"></i></span>fullMoon</a></li>
+          <li><a href="./works/fullMoon/index.html"><span class="fa-li"><i class="fas fa-circle"></i></span>fullMoon</a></li>
           <li><a href="./works/neonWave/index.html"><span class="fa-li"><i class="fas fa-wave-square"></i></span>neonWave</a></li>
           <li><a href="./works/mamaragan/index.html"><span class="fa-li"><i class="fas fa-bolt"></i></span>mamaragan</a></li>
           <li><a href="./works/particleParty/index.html"><span class="fa-li"><i class="fas fa-circle"></i></span>particleParty</a></li>
-          <li><a href="./works/orangeKun/index.html"><span class="fa-li"><i class="fas fa-circle"></i></span>orangeKun</a></li>
+          <li><a href="./works/orangeKun/index.html"><span class="fa-li"><i class="fas fa-pencil-alt"></i></span>orangeKun</a></li>
+          <li><a href="./works/bigBang/index.html"><span class="fa-li"><i class="fas fa-bomb"></i></span>bigBang</a></li>
         </ul>
       </div>
       <!-- Vehicles -->
