--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
         <h2>This Site</h2>
         <p>
           I like canvas especially now, I thought I want to publish works while learning so I made this site.<br>
-          All the works's code here is published on CodePen, GitHub. Please go to see it.<br>
-          Please feel free to message me anytime on twitter, I'm so bored.<br>
+          All the works's code here is published on CodePen, GitHub. Please go to see it.
         </p>
-        <p>Thanks!!!</p>
+        <p>
+          By the way, Please tell me about you :) You can send message me on twitter, I'm so bored.
+        </p>
+        <p>Thanks.</p>
       </div>
       <!-- Works -->
       <div id="works" style="display: none;">
