--- a/works/shapeOfUniverse/index.html
+++ b/works/shapeOfUniverse/index.html
@@ -18,8 +18,8 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
-    <meta property="og:title" content="Toshiya Marukubo | Homepage | poppingBall">
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-poppingBall.png">
+    <meta property="og:title" content="Toshiya Marukubo | Homepage | shapeOfUniverse">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-shapeOfUniverse.png">
     <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -28,7 +28,7 @@
     <!-- Icons -->
     <link rel="icon" href="https://toshiya-marukubo.github.io/home/img/favicon.svg" sizes="any" type="image/svg+xml">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | poppingBall</title>
+    <title>Toshiya Marukubo | Homepage | shapeOfUniverse</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -36,7 +36,7 @@
   <body>
     <!-- Header -->
     <header id="header">
-      <h1>poppingBall</h1>
+      <h1>shapeOfUniverse</h1>
       <ul>
         <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
         <li id="other">Other</li>
@@ -48,14 +48,17 @@
     <!-- Main -->
     <main id="main" style="display: none;">
       <canvas id="canvas">Canvas not supported.</canvas>
-      <div class="controller">
-        <p><input type="range" id="count" min="1" max="300" step="1" value="200"></p>
-      </div>
+      <ul id="navigation">
+        <li>- Up to rotate left</li>
+        <li>Down to rotate right -</li>
+      </ul>
+      <p class="count"><input type="range" id="range" min="1" max="100" step="1" value="30"></p>
+      <p class="left">Scroll right to speed up -</p>
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
     <script src="../../home/js/other.js"></script>
-    <script src="./poppingBall.js"></script>
+    <script src="./shapeOfUniverse.js"></script>
   </body>
 </html>
 
