--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/tree/index.html"><img loading="lazy" src="./home/img/og/og-min-tree.png" alt="tree"></a><p>tree / May 20, 2020</p></li>
             <li><a href="./works/flowers/index.html"><img loading="lazy" src="./home/img/og/og-min-flowers.png" alt="flowers"></a><p>flowers / May 18, 2020</p></li>
             <li><a href="./works/shapeOfUniverse/index.html"><img loading="lazy" src="./home/img/og/og-min-shapeOfUniverse.png" alt="shapeOfUniverse"></a><p>shapeOfUniverse / May 16, 2020</p></li>
             <li><a href="./works/fog/index.html"><img loading="lazy" src="./home/img/og/og-min-fog.png" alt="fog"></a><p>fog / May 14, 2020</p></li>
