--- a/pattern/index.html
+++ b/pattern/index.html
@@ -41,6 +41,7 @@
       <h1><a href="./index.html"><span class="logo"></span>Pattern</a></h1>
       <nav>
         <ul>
+          <li>Introduces patterns.</li>
           <li><a href="https://twitter.com/toshiyamarukubo" target="_blank">@toshiyamarukubo</a></li>
           <li class="flash"><a href="./works/index.html">Works</a></li>
         </ul>
