--- a/pattern/works/sippoutsunagi/index.html
+++ b/pattern/works/sippoutsunagi/index.html
@@ -41,8 +41,9 @@
       <h1><a href="../../index.html"><span class="logo"></span>Pattern</a></h1>
       <nav>
         <ul>
-          <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
-          <li><a href="../index.html">Works</a></li>
+          <li>Introduces patterns.</li>
+          <li><a href="https://twitter.com/toshiyamarukubo" target="_blank">@toshiyamarukubo</a></li>
+          <li class="flash"><a href="../index.html">Works</a></li>
         </ul>
       </nav>
     </header>
