--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,7 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./narihirabishi/index.html"><img src="../images/narihirabishi.png" alt="narihirabishi image"></a></li>
         <li><a href="./anpanman/index.html"><img src="../images/anpanman.png" alt="anpanman image"></a></li>
         <li><a href="./irekobishi/index.html"><img src="../images/irekobishi.png" alt="irekobishi image"></a></li>
         <li><a href="./sankuzushi/index.html"><img src="../images/sankuzushi.png" alt="sankuzushi image"></a></li>
