--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -49,6 +49,7 @@
     <main>
       <ul>
         <li><a href="./uroko/index.html"><img src="../images/uroko.png" alt="uroko image"></a></li>
+        <li><a href="./ishidatami/index.html"><img src="../images/ishidatami.png" alt="ishidatami image"></a></li>
         <li><a href="./takedabishi/index.html"><img src="../images/takedabishi.png" alt="takedabishi image"></a></li>
         <li><a href="./narihirabishi/index.html"><img src="../images/narihirabishi.png" alt="narihirabishi image"></a></li>
         <li><a href="./anpanman/index.html"><img src="../images/anpanman.png" alt="anpanman image"></a></li>
