--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,7 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./kuzureasanoha/index.html"><img src="../images/kuzureasanoha.png" alt="kuzureasanoha image"></a></li>
         <li><a href="./asanoha/index.html"><img src="../images/asanoha.png" alt="asanoha image"></a></li>
         <li><a href="./kanoko/index.html"><img src="../images/kanoko.png" alt="kanoko image"></a></li>
         <li><a href="./uroko/index.html"><img src="../images/uroko.png" alt="uroko image"></a></li>
