--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,7 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./misujidate/index.html"><img src="../images/misujidate.png" alt="misujidate image"></a></li>
         <li><a href="./kindooshi/index.html"><img src="../images/kindooshi.png" alt="kindooshi image"></a></li>
         <li><a href="./ararekomon/index.html"><img src="../images/ararekomon.png" alt="ararekomon image"></a></li>
         <li><a href="./kuzureasanoha/index.html"><img src="../images/kuzureasanoha.png" alt="kuzureasanoha image"></a></li>
